--- a/index.html
+++ b/index.html
@@ -1,25 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="config/main.css" />
-    <script src="config/main.js" type="module"></script>
-  </head>
-  <body>
-    <div class="center">
-      <h1 id="title"></h1>
-      <p id="subtitle"></p>
-    </div>
-    <div class="center">
-      <input type="text" id="searchInput" placeholder="Search games" />
-    </div>
-    <div id="gamesContainer"></div>
-    <div class="footer">
-      <a style="font-weight: 700">a site by
-      </a><a style="font-weight: 700" class="link" href="https://dsc.gg/parcoil">parcoil network</a>
-    </div>
-  </body>
-</html>
-
+<p>&nbsp;</p>
+<div class="center">&nbsp;</div>
+<div class="center"><input id="searchInput" type="text" placeholder="Search games" /></div>
+<div id="gamesContainer">&nbsp;</div>
+<div class="footer"><a style="font-weight: bold;">a site by </a><a class="link" style="font-weight: bold;" href="https://dsc.gg/parcoil">parcoil network</a></div>
+<div class="footer">Edit by kevin</div>
+<div class="footer"><img src="kevin.jpeg" alt="Try" /></div>
