--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 <div id="gamesContainer">&nbsp;</div>
 <div class="footer"><a style="font-weight: bold;">a site by </a><a class="link" style="font-weight: bold;" href="https://dsc.gg/parcoil">parcoil network</a></div>
 <div class="footer">Edit by kevin</div>
-<div class="footer"><img src="kevin.jpeg" alt="Try" /></div>
+<div class="footer"><img src="config/kevin.jpeg" alt="Try" /></div>
