--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <p>&nbsp;</p>
 <div class="center">&nbsp;</div>
-<div class="center"><input id="searchInput" type="text" placeholder="Search games" /></div>
+<div class="center">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<input id="searchInput" type="text" placeholder="Search games" /></div>
 <div id="gamesContainer">&nbsp;</div>
-<div class="footer"><a style="font-weight: bold;">a site by </a><a class="link" style="font-weight: bold;" href="https://dsc.gg/parcoil">parcoil network</a></div>
+<div class="footer"><a style="font-weight: bold;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; a site by </a><a class="link" style="font-weight: bold;" href="https://dsc.gg/parcoil">parcoil network</a></div>
 <div class="footer">Edit by kevin</div>
-<div class="footer"><img src="config/kevin.jpeg" alt="Try" /></div>
+<div class="footer">&nbsp;</div>
+<div class="footer"><a title="game" href="config/gametest.html">game1.html</a></div>
