--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <div class="footer"><a style="font-weight: bold;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; a site by </a><a class="link" style="font-weight: bold;" href="https://dsc.gg/parcoil">parcoil network</a></div>
 <div class="footer">Edit by kevin</div>
 <div class="footer">&nbsp;</div>
-<div class="footer"><a title="game" href="config/gametest.html">game1.html</a></div>
+<div class="footer"><a title="game" href="config/gametest.html">game1</a></div>
