--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@
 <div class="footer">Edit by kevin</div>
 <div class="footer">&nbsp;</div>
 <div class="footer"><a title="game" href="config/gametest.html">snake</a></div>
+<p>I will add more game.</p>
