--- a/play.html
+++ b/play.html
@@ -26,7 +26,7 @@
       var serverUrl1 = "https://parcoil-assets.onrender.com";
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
-      const gameUrl = urlParams.get("gameurl");
+      const gameUrl = urlParams.get("https://nehemiahk.github.io/Minecraft-Game/minecraft.html");
 
       if (!gameUrl) {
         alert("Game URL not provided!");
