--- a/play.html
+++ b/play.html
@@ -23,7 +23,7 @@
     <iframe id="gameFrame"></iframe>
 
     <script>
-      var serverUrl1 = "https://parcoil-assets.onrender.com";
+      var serverUrl1 = "https://nehemiahk.github.io/Minecraft-Game/minecraft.html";
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
       const gameUrl = urlParams.get("https://nehemiahk.github.io/Minecraft-Game/minecraft.html");
