--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <div id="gamesContainer">&nbsp;</div>
 <div class="footer"><a style="font-weight: bold;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; a site by </a><a class="link" style="font-weight: bold;" href="https://dsc.gg/parcoil">parcoil network</a></div>
 <div class="footer">Edit by kevin</div>
-<div class="footer">&nbsp;<a title="Mc" href="https:minecraft.html">Mc</a></div>
+<div class="footer">&nbsp;<a title="Mc" href="minecraft.html">Mc</a></div>
 <div class="footer"><a title="game" href="config/gametest.html">snake</a></div>
 <p>I will add more game.</p>
